# company_test_task

./: .gitignore  README.md  README.rst  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/company/: admin.py  filters.py  serializers.py  views.py
backend/company/migrations/: 0001_initial.py  0002_alter_employee_department.py
backend/company/models/: __init__.py  department.py  employee.py
backend/config/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
